--- a/app/src/main/res/layout/item_rv_doc.xml
+++ b/app/src/main/res/layout/item_rv_doc.xml
@@ -3,7 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    app:cardElevation="4dp"
+    app:cardCornerRadius="8dp"
+    android:layout_height="wrap_content"
+    android:background="#4CD9D9D9">
 
     <ImageView
         android:id="@+id/imageView"
@@ -34,8 +37,8 @@
 
     <TextView
         android:id="@+id/descripcion"
-        android:layout_width="134dp"
-        android:layout_height="15dp"
+        android:layout_width="216dp"
+        android:layout_height="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="8dp"
         android:text="Lima - Lima - Perú"
@@ -59,6 +62,38 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.928" />
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="6dp"
+        android:layout_height="135dp"
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="6dp"
+        android:layout_height="135dp"
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </RelativeLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
