--- a/app/src/main/res/layout/activity_list_create.xml
+++ b/app/src/main/res/layout/activity_list_create.xml
@@ -58,6 +58,7 @@
                     android:text="Rodrigo"
                     android:textAlignment="center"
                     android:textSize="24sp"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.41"
