--- a/app/src/main/res/layout/activity_list_create.xml
+++ b/app/src/main/res/layout/activity_list_create.xml
@@ -39,10 +39,12 @@
                     app:layout_constraintVertical_bias="0.041"
                     app:srcCompat="@drawable/circle_outline_24" />
 
-                <ImageView
+                <ImageButton
                     android:id="@+id/imageView2"
-                    android:layout_width="89dp"
-                    android:layout_height="72dp"
+                    android:layout_width="86dp"
+                    android:layout_height="76dp"
+                    android:backgroundTint="#FFFFFF"
+                    android:scaleType="fitXY"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.086"
