--- a/app/src/main/res/layout/item_rv_actividad.xml
+++ b/app/src/main/res/layout/item_rv_actividad.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    app:cardElevation="4dp"
-    app:cardCornerRadius="8dp"
     android:layout_height="wrap_content"
-    android:background="#4CD9D9D9">
+    android:background="#4CD9D9D9"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="148dp"
+        android:layout_width="132dp"
         android:layout_height="120dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,44 +24,25 @@
         android:layout_width="202dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="70dp"
-        android:text="Dr. Pawan"
+        android:layout_marginTop="8dp"
+        android:text="Titulo"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.717" />
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
 
     <TextView
         android:id="@+id/descripcion"
         android:layout_width="216dp"
         android:layout_height="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="8dp"
-        android:text="Lima - Lima - Perú"
+        android:layout_marginBottom="68dp"
+        android:text="Desc"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.539" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="109dp"
-        android:layout_height="38dp"
-        android:backgroundTint="#198EB6"
-        android:text="Info"
-        android:textAllCaps="false"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.596"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.928" />
+        app:layout_constraintStart_toEndOf="@+id/imageView" />
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
@@ -94,6 +75,59 @@
         app:layout_constraintTop_toTopOf="parent">
 
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/fechai"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="16dp"
+        android:text="00/00/0000"
+        app:layout_constraintStart_toStartOf="@+id/descripcion"
+        app:layout_constraintTop_toBottomOf="@+id/descripcion" />
+
+    <TextView
+        android:id="@+id/inicio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="00:00"
+        app:layout_constraintStart_toEndOf="@+id/fechai"
+        app:layout_constraintTop_toTopOf="@+id/fechai" />
+
+    <TextView
+        android:id="@+id/fin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="00:00"
+        app:layout_constraintStart_toStartOf="@+id/inicio"
+        app:layout_constraintTop_toBottomOf="@+id/inicio" />
+
+    <TextView
+        android:id="@+id/fechaf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="00/00//0000"
+        app:layout_constraintStart_toStartOf="@+id/fechai"
+        app:layout_constraintTop_toBottomOf="@+id/fechai" />
+
+    <TextView
+        android:id="@+id/textView29"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start:"
+        app:layout_constraintStart_toStartOf="@+id/descripcion"
+        app:layout_constraintTop_toTopOf="@+id/fechai" />
+
+    <TextView
+        android:id="@+id/textView30"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="End:"
+        app:layout_constraintStart_toStartOf="@+id/textView29"
+        app:layout_constraintTop_toTopOf="@+id/fechaf" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
